--- a/shopapp.webui.csproj
+++ b/shopapp.webui.csproj
@@ -1,9 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5"/>
+    <PackageReference Include="MySql.Data" Version="8.0.31"/>
+  </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\shopapp.data\shopapp.data.csproj" />
+  </ItemGroup>
+  
 </Project>
